deploy/gitops-repository/platform/cloudsentinel-monitoring/overlays/lab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-40"
