deploy/gitops-repository/platform/cloudsentinel-monitoring/overlays/lab/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      nodeSelector:
        node-role: monitoring
        kubernetes.io/hostname: worker-monitor
      tolerations:
        - key: dedicated
          operator: Equal
          value: monitoring
          effect: NoSchedule
      imagePullSecrets:
        - name: cloudsentinel-registry
      securityContext:
        fsGroup: 472
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: grafana
          image: cloudsentinel-grafana
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests: {cpu: 50m, memory: 128Mi}
            limits: {cpu: 250m, memory: 320Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 472
            runAsGroup: 472
            capabilities:
              drop: [ALL]
          readinessProbe:
            httpGet: {path: /api/health, port: http}
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet: {path: /api/health, port: http}
            periodSeconds: 20
            timeoutSeconds: 3
          volumeMounts:
            - {name: data, mountPath: /var/lib/grafana}
            - {name: provisioning, mountPath: /etc/grafana/provisioning/datasources/datasource.yaml, subPath: datasource.yaml, readOnly: true}
            - {name: provisioning, mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml, subPath: dashboards.yaml, readOnly: true}
            - {name: dashboard, mountPath: /etc/grafana/dashboards/cloudsentinel-overview.json, subPath: cloudsentinel-overview.json, readOnly: true}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-data
        - name: provisioning
          configMap:
            name: grafana-provisioning
        - name: dashboard
          configMap:
            name: grafana-dashboard-cloudsentinel
