deploy/gitops-repository/platform/cloudsentinel-monitoring/overlays/lab/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes: [Ingress]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-internal
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-control-plane-observability
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - prometheus
          - alertmanager
          - grafana
          - metrics-server
  policyTypes: [Ingress]
  ingress:
    - from:
        - ipBlock:
            cidr: 172.29.253.154/32
        - ipBlock:
            cidr: 172.29.253.155/32
        - ipBlock:
            cidr: 172.29.253.152/32
        - ipBlock:
            cidr: 10.244.184.64/32
        - ipBlock:
            cidr: 10.244.222.0/32
        - ipBlock:
            cidr: 10.244.133.128/32
      ports:
        - {protocol: TCP, port: 9090}
        - {protocol: TCP, port: 9093}
        - {protocol: TCP, port: 3000}
        - {protocol: TCP, port: 10250}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-public-grafana
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes: [Ingress]
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - {protocol: TCP, port: 3000}
